--- a/Docker/ClusterKitPublisher/fallBackConfiguration.json
+++ b/Docker/ClusterKitPublisher/fallBackConfiguration.json
@@ -36,22 +36,22 @@
     {
       "BuildDate": null,
       "Id": "Akka",
-      "Version": "1.1.3"
+      "Version": "1.1.3.344-beta"
     },
     {
       "BuildDate": null,
       "Id": "Akka.Cluster",
-      "Version": "1.1.3"
+      "Version": "1.1.3.344-beta"
     },
     {
       "BuildDate": null,
       "Id": "Akka.Cluster.Sharding",
-      "Version": "1.1.3.32-beta"
+      "Version": "1.1.3.344-beta"
     },
     {
       "BuildDate": null,
       "Id": "Akka.Cluster.Tools",
-      "Version": "1.1.3.32-beta"
+      "Version": "1.1.3.344-beta"
     },
     {
       "BuildDate": null,
@@ -61,27 +61,27 @@
     {
       "BuildDate": null,
       "Id": "Akka.DI.Core",
-      "Version": "1.1.3"
+      "Version": "1.1.3.344-beta"
     },
     {
       "BuildDate": null,
       "Id": "Akka.Logger.Serilog",
-      "Version": "1.1.2"
+      "Version": "1.1.3.12-beta"
     },
     {
       "BuildDate": null,
       "Id": "Akka.Persistence",
-      "Version": "1.1.3.32-beta"
+      "Version": "1.1.3.344-beta"
     },
     {
       "BuildDate": null,
       "Id": "Akka.Remote",
-      "Version": "1.1.3"
+      "Version": "1.1.3.344-beta"
     },
     {
       "BuildDate": null,
       "Id": "Akka.Serialization.Hyperion",
-      "Version": "1.1.3.32-beta"
+      "Version": "1.1.3.344-beta"
     },
     {
       "BuildDate": null,
@@ -97,6 +97,11 @@
       "BuildDate": null,
       "Id": "Castle.Windsor",
       "Version": "3.4.0"
+    },
+    {
+      "BuildDate": null,
+      "Id": "ClusterKit.API.Client",
+      "Version": "0.0.0-local"
     },
     {
       "BuildDate": null,
@@ -142,6 +147,31 @@
       "BuildDate": null,
       "Id": "docopt.net",
       "Version": "0.6.1.9"
+    },
+    {
+      "BuildDate": null,
+      "Id": "DotNetty.Buffers",
+      "Version": "0.3.2"
+    },
+    {
+      "BuildDate": null,
+      "Id": "DotNetty.Codecs",
+      "Version": "0.3.2"
+    },
+    {
+      "BuildDate": null,
+      "Id": "DotNetty.Common",
+      "Version": "0.3.2"
+    },
+    {
+      "BuildDate": null,
+      "Id": "DotNetty.Handlers",
+      "Version": "0.3.2"
+    },
+    {
+      "BuildDate": null,
+      "Id": "DotNetty.Transport",
+      "Version": "0.3.2"
     },
     {
       "BuildDate": null,
@@ -276,7 +306,7 @@
     {
       "BuildDate": null,
       "Id": "Serilog",
-      "Version": "2.3.0"
+      "Version": "2.4.0"
     },
     {
       "BuildDate": null,
