--- a/ClusterKit.API/ClusterKit.API.Client/ClusterKit.API.Client.csproj
+++ b/ClusterKit.API/ClusterKit.API.Client/ClusterKit.API.Client.csproj
@@ -92,6 +92,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueriApiRequest.cs" />
     <Compile Include="QueryResult.cs" />
+    <Compile Include="SortingCondition.cs" />
+    <Compile Include="SortingHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
