--- a/ClusterKit.Data/ClusterKit.Data.TestKit/ClusterKit.Data.TestKit.csproj
+++ b/ClusterKit.Data/ClusterKit.Data.TestKit/ClusterKit.Data.TestKit.csproj
@@ -181,6 +181,14 @@
     <Compile Include="UniversalTestDataFactory.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\ClusterKit.API\ClusterKit.API.Client\ClusterKit.API.Client.csproj">
+      <Project>{2A6EDCC4-C729-4BEE-9BB5-AC6F76B3BAC8}</Project>
+      <Name>ClusterKit.API.Client</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.Data.CRUD\ClusterKit.Data.CRUD.csproj">
+      <Project>{FDA59712-9625-4CDF-B8FD-6DF19960C8C0}</Project>
+      <Name>ClusterKit.Data.CRUD</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ClusterKit.Data\ClusterKit.Data.csproj">
       <Project>{0D6871D1-5A69-4533-BA4B-073B876232C5}</Project>
       <Name>ClusterKit.Data</Name>
