--- a/ClusterKit.Web/ClusterKit.Web.GraphQL.Publisher/ClusterKit.Web.GraphQL.Publisher.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.GraphQL.Publisher/ClusterKit.Web.GraphQL.Publisher.csproj
@@ -162,6 +162,10 @@
       <HintPath>..\..\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Owin.Cors">
+      <HintPath>..\..\packages\Microsoft.Owin.Cors.3.0.1\lib\net45\Microsoft.Owin.Cors.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Owin.Host.HttpListener">
       <HintPath>..\..\packages\Microsoft.Owin.Host.HttpListener.3.0.1\lib\net45\Microsoft.Owin.Host.HttpListener.dll</HintPath>
       <Private>True</Private>
@@ -251,6 +255,7 @@
     <Compile Include="ApiBrowserActor.cs" />
     <Compile Include="ApiProvider.cs" />
     <Compile Include="Internals\Converter.cs" />
+    <Compile Include="OwinConfigurator.cs" />
     <Compile Include="SchemaProvider.cs" />
     <Compile Include="TempApiRequest.cs" />
     <Compile Include="Configuration.Designer.cs">
