--- a/ClusterKit.Web/ClusterKit.Web.GraphQL.Publisher/packages.config
+++ b/ClusterKit.Web/ClusterKit.Web.GraphQL.Publisher/packages.config
@@ -33,6 +33,7 @@
   <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net46" />
