GraphQL: enum support

--- a/ClusterKit.API/ClusterKit.API.Client/ClusterKit.API.Client.csproj
+++ b/ClusterKit.API/ClusterKit.API.Client/ClusterKit.API.Client.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiDescription.cs" />
+    <Compile Include="ApiEnumType.cs" />
     <Compile Include="ApiField.cs" />
     <Compile Include="ApiRequest.cs" />
     <Compile Include="ApiObjectType.cs" />
