--- a/ClusterKit.Web/ClusterKit.Web.GraphQL.Publisher/ClusterKit.Web.GraphQL.Publisher.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.GraphQL.Publisher/ClusterKit.Web.GraphQL.Publisher.csproj
@@ -255,6 +255,7 @@
     <Compile Include="ApiBrowserActor.cs" />
     <Compile Include="ApiProvider.cs" />
     <Compile Include="Internals\Converter.cs" />
+    <Compile Include="Internals\MergedEnumType.cs" />
     <Compile Include="OwinConfigurator.cs" />
     <Compile Include="SchemaProvider.cs" />
     <Compile Include="TempApiRequest.cs" />
