--- a/ClusterKit.Web/ClusterKit.Web.GraphQL.Publisher/ClusterKit.Web.GraphQL.Publisher.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.GraphQL.Publisher/ClusterKit.Web.GraphQL.Publisher.csproj
@@ -257,6 +257,7 @@
     <Compile Include="ApiProvider.cs" />
     <Compile Include="GraphTypes\NodeInterface.cs" />
     <Compile Include="Internals\Converter.cs" />
+    <Compile Include="Internals\MergedConnectionMutationResultType.cs" />
     <Compile Include="Internals\MergedEnumType.cs" />
     <Compile Include="Internals\MergedFieldedType.cs" />
     <Compile Include="Internals\NodeSearcher.cs" />
