GraphQL: connection mutations finished

--- a/ClusterKit.Data/ClusterKit.Data.CRUD/ClusterKit.Data.CRUD.csproj
+++ b/ClusterKit.Data/ClusterKit.Data.CRUD/ClusterKit.Data.CRUD.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="ILargeObject.cs" />
     <Compile Include="IMessageWithExtraData.cs" />
+    <Compile Include="IObjectWithId.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
