--- a/ClusterKit.Web/ClusterKit.Web.GraphQL.Publisher/ClusterKit.Web.GraphQL.Publisher.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.GraphQL.Publisher/ClusterKit.Web.GraphQL.Publisher.csproj
@@ -260,6 +260,7 @@
     <Compile Include="Internals\MergedConnectionMutationResultType.cs" />
     <Compile Include="Internals\MergedEnumType.cs" />
     <Compile Include="Internals\MergedFieldedType.cs" />
+    <Compile Include="Internals\MergedUntypedMutationResult.cs" />
     <Compile Include="Internals\NodeSearcher.cs" />
     <Compile Include="MergedNodeType.cs" />
     <Compile Include="OwinConfigurator.cs" />
