--- a/Docker/ClusterKitPublisher/fallBackConfiguration.json
+++ b/Docker/ClusterKitPublisher/fallBackConfiguration.json
@@ -110,6 +110,11 @@
     },
     {
       "BuildDate": null,
+      "Id": "ClusterKit.Data.CRUD",
+      "Version": "0.0.0-local"
+    },
+    {
+      "BuildDate": null,
       "Id": "ClusterKit.LargeObjects",
       "Version": "0.0.0-local"
     },
