GraphQL: published property/method converters

--- a/ClusterKit.API/ClusterKit.API.Client/ClusterKit.API.Client.csproj
+++ b/ClusterKit.API/ClusterKit.API.Client/ClusterKit.API.Client.csproj
@@ -81,11 +81,14 @@
     <Compile Include="Attributes\DeclareFieldAttribute.cs" />
     <Compile Include="Attributes\DeclareMutationAttribute.cs" />
     <Compile Include="Attributes\PublishToApiAttribute.cs" />
+    <Compile Include="Converters\ArrayConverter.cs" />
+    <Compile Include="Converters\StringConverter.cs" />
     <Compile Include="EnFieldFlags.cs" />
     <Compile Include="EnScalarType.cs" />
     <Compile Include="ErrorDescription.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="INodeConnection.cs" />
+    <Compile Include="IValueConverter.cs" />
     <Compile Include="Messages\ApiDiscoverRequest.cs" />
     <Compile Include="Messages\ApiDiscoverResponse.cs" />
     <Compile Include="Messages\SurrogatableJObject.cs" />
