--- a/ClusterKit.API/ClusterKit.API.Tests/ClusterKit.API.Tests.csproj
+++ b/ClusterKit.API/ClusterKit.API.Tests/ClusterKit.API.Tests.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Mock\TestObject.cs" />
     <Compile Include="Mock\TestObjectConnection.cs" />
     <Compile Include="Mock\TestProvider.cs" />
+    <Compile Include="Mock\ThirdPartyObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
