--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
@@ -24,6 +24,8 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="EntityFramework6.Npgsql" version="3.1.1" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
+  <package id="GraphQL" version="0.14.6.657" targetFramework="net46" />
+  <package id="GraphQL-Parser" version="2.0.0" targetFramework="net46" />
   <package id="Helios" version="2.1.3" targetFramework="net45" />
   <package id="Hyperion" version="0.9.2" targetFramework="net46" />
   <package id="JetBrains.Annotations" version="10.2.1" targetFramework="net46" />
