GraphQL: fixed null value for enum fields on network data sent requests

--- a/ClusterKit.API/ClusterKit.API.Provider/ClusterKit.API.Provider.csproj
+++ b/ClusterKit.API/ClusterKit.API.Provider/ClusterKit.API.Provider.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Resolvers\ObjectResolver.cs" />
     <Compile Include="Resolvers\IResolver.cs" />
     <Compile Include="Resolvers\ScalarResolver.cs" />
+    <Compile Include="Resolvers\StringResolver.cs" />
     <Compile Include="Resolvers\SwapVisitor.cs" />
     <Compile Include="TypeMetadata.cs" />
   </ItemGroup>
