--- a/ClusterKit.Data/ClusterKit.Data.Tests/packages.config
+++ b/ClusterKit.Data/ClusterKit.Data.Tests/packages.config
@@ -9,11 +9,12 @@
   <package id="Akka.TestKit.Xunit2" version="1.1.3.344-beta" targetFramework="net46" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.4.0" targetFramework="net46" />
+  <package id="Effort.EF6" version="1.3.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="Hyperion" version="0.9.2" targetFramework="net46" />
   <package id="JetBrains.Annotations" version="10.2.1" targetFramework="net46" />
-  <package id="Moq" version="4.5.30" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
+  <package id="NMemory" version="1.1.0" targetFramework="net46" />
   <package id="Serilog" version="2.4.0" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net46" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net46" />
