--- a/ClusterKit.Data/ClusterKit.Data.Tests/ClusterKit.Data.Tests.csproj
+++ b/ClusterKit.Data/ClusterKit.Data.Tests/ClusterKit.Data.Tests.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Mock\TestUserFactory.cs" />
     <Compile Include="Mock\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelectBuilderTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
