--- a/ClusterKit.API/ClusterKit.API.Client/ClusterKit.API.Client.csproj
+++ b/ClusterKit.API/ClusterKit.API.Client/ClusterKit.API.Client.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Messages\SurrogateJObject.cs" />
     <Compile Include="MutationApiRequest.cs" />
     <Compile Include="MutationResult.cs" />
+    <Compile Include="NamingUtilities.cs" />
     <Compile Include="NodeSearchApiRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueriApiRequest.cs" />
