GraphQL: virtual id will try to get actual id from object (in case it can)

--- a/ClusterKit.API/ClusterKit.API.Tests/ClusterKit.API.Tests.csproj
+++ b/ClusterKit.API/ClusterKit.API.Tests/ClusterKit.API.Tests.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Mock\NestedProvider.cs" />
     <Compile Include="Mock\TestObject.cs" />
     <Compile Include="Mock\TestObjectConnection.cs" />
+    <Compile Include="Mock\TestObjectNoId.cs" />
     <Compile Include="Mock\TestProvider.cs" />
     <Compile Include="Mock\ThirdPartyObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
