--- a/ClusterKit.Data/ClusterKit.Data/ClusterKit.Data.csproj
+++ b/ClusterKit.Data/ClusterKit.Data/ClusterKit.Data.csproj
@@ -177,9 +177,15 @@
   <ItemGroup>
     <Compile Include="BaseCrudActor.cs" />
     <Compile Include="BaseCrudActorWithNotifications.cs" />
+    <Compile Include="Configuration.Designer.cs">
+      <DependentUpon>Configuration.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="IContextFactory.cs" />
     <Compile Include="DataFactory.cs" />
     <Compile Include="IDataSeeder.cs" />
+    <Compile Include="Installer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateMessage.cs" />
   </ItemGroup>
@@ -196,6 +202,13 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Resources\akka.hocon" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Configuration.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Configuration.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
