--- a/Docker/ClusterKitMonitoring/clusterkit-web/package.json
+++ b/Docker/ClusterKitMonitoring/clusterkit-web/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^15.4.2",
     "react-fa": "^4.1.2",
     "react-relay": "^0.10.0",
+    "react-relay-network-layer": "^2.0.0",
     "react-router": "^3.0.2",
     "react-router-bootstrap": "^0.23.1",
     "react-router-relay": "^0.13.5"
